fix submenu spacing; button sizing issues still remain

--- a/avidaED.css
+++ b/avidaED.css
@@ -68,7 +68,7 @@ button {
    cursor:pointer;
    border-radius: 5px;
    /* may change later- responsive button design */
-   min-width: 4.5vw;
+   /* min-width: 4.5vw; */
  }
  
 
